<resources>
    <string name="app_name">sVote\n스쿨보트</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="school">학교</string>
    <string name="grade">학년</string>
    <string name="classroom">반</string>
    <string name="schoolnum">이름</string>
    <string name="mail">이메일</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>
    <string name="emh">example@svote-234d1.appspot.com</string>
    <string name="gh">4</string>
    <string name="clh">7</string>
    <string name="nuh">홍길동</string>
    <string name="lv">투표 진행 중…</string>
    <string name="lvst">현재 sVote 앱을 이용해 투표를 진행 중입니다.</string>
    <string name="jv">투표 참여</string>
    <string name="goback">돌아가기</string>
    <string name="acc">나의 정보</string>
    <string name="vs">진행중인 투표</string>
    <string name="ci">정보 수정</string>
    <string name="title">제목</string>
    <string name="subtitle">상세 설명</string>
    <string name="expires">만료</string>
    <string name="lists">항목</string>
    <string name="push">등록</string>
    <string name="makevote">투표 만들기</string>
    <string name="managevote">투표 관리</string>
    <string name="forsomeone">대상</string>
    <string name="schedule">진행중인 투표</string>
    <string name="delete">투표 삭제</string>
    <string name="total">집계</string>
    <string name="search">검색…</string>
    <string name="dl">투표명을 입력하여 검색하세요.</string>
    <string name="feed">문의사항</string>
    <string name="suda">생각 더하기</string>
    <string name="feedhint">여기에 피드백을 남겨주세요…\n(이메일 : hychew463@gmail.com)</string>
    <string name="gho">생각 열기</string>
    <string name="mh">생각 관리</string>
    <string name="jmt">생각 나누기</string>
    <string name="dm">삭제</string>
    <string name="dlm">생각더하기+의 제목을\n입력하여 검색하세요.</string>
    <string name="sch">학교</string>
    <string name="schint">서울도성초등학교</string>
    <string name="meetingschedule">생각 더하기</string>
    <string name="graph">원그래프</string>
    <string name="talk">의견 공유</string>
    <string name="mi">생각더하기+ 정보</string>
    <string name="vi">투표 정보</string>
    <string name="vn">투표명</string>
    <string name="mn">나눌 생각</string>
</resources>