<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteManageActivity"
    android:background="@color/colorWhite">

    <EditText
        android:id="@+id/searchfor_vm"
        android:layout_width="192dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/search"
        android:fontFamily="@font/bmjua" />

    <Button
        android:id="@+id/search_vm"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/search"
        app:layout_constraintStart_toEndOf="@id/searchfor_vm"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="loadData"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/title_vm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="48sp"
        android:text="@string/vn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/bmjua" />

    <Button
        android:id="@+id/delete_vm"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete"
        android:background="@color/colorLightGray"
        android:onClick="onClick"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/title_vm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subtitle"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/subtitle_vm"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:text="@string/dl"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_vm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/forsomeone"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/forsomeone_vm"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_vm"
        app:layout_constraintLeft_toRightOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@id/textView2"
        android:fontFamily="@font/bmjua" />

    <Button
        android:id="@+id/total_vm"
        android:layout_width="192dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/delete_vm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/total"
        android:onClick="total"
        android:fontFamily="@font/bmjua" />

    <Button
        android:id="@+id/pc_vm"
        android:layout_width="192dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/delete_vm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/graph"
        android:onClick="showPieChart"
        android:fontFamily="@font/bmjua" />

</androidx.constraintlayout.widget.ConstraintLayout>