<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetingManageActivity"
    android:background="@color/colorWhite" >

    <EditText
        android:id="@+id/searchfor_mm"
        android:layout_width="300dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/search"
        android:fontFamily="@font/bmjua" />

    <Button
        android:id="@+id/search_mm"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/search"
        app:layout_constraintStart_toEndOf="@id/searchfor_mm"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="search"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/title_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="48sp"
        android:text="@string/mn"
        android:fontFamily="@font/bmjua" />

    <Button
        android:id="@+id/delete_mm"
        android:layout_height="wrap_content"
        android:layout_width="216dp"
        android:layout_marginBottom="105dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dm"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"
        android:onClick="onCcclick"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/title_mm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subtitle"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/subtitle_mm"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:text="@string/dlm"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_mm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/forsomeone"
        android:fontFamily="@font/bmjua" />

    <TextView
        android:id="@+id/forsomeone_mm"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_mm"
        app:layout_constraintLeft_toRightOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@id/textView2"
        android:fontFamily="@font/bmjua" />

</androidx.constraintlayout.widget.ConstraintLayout>