<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReauthenticatingActivity"
    android:background="@color/colorWhite" >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/svotelogo" />

    <TextView
        android:id="@+id/textView1"
        android:text="@string/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:text="@string/classroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:text="@string/schoolnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/grade_ra"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginTop="296dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/clroom_ra"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/grade_ra"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/number_ra"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/clroom_ra"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/goback_ra"
        android:text="@string/goback"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="gobacktoaccountinfo" />

    <Button
        android:id="@+id/button_ra"
        android:text="@string/push"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="done" />

</androidx.constraintlayout.widget.ConstraintLayout>